# OSEXave

./: Cargo.toml
resources/Windows/: HRESULT.csv  from_csv_to_rust.py
src/: lib.rs
src/Darwin/OSError_m/: mod.rs  os_error_d.rs  os_error_m.rs
src/Linux/: mod.rs
src/Linux/OSError_m/: os_error_d.rs  os_error_m.rs
src/Windows/OSError_m/: os_error_d.rs  os_error_m.rs
src/types/: mod.rs
src/types/errors/: error_d.rs  mod.rs  other.rs
