[package]
name = "OSEXave"
version = "0.0.7"
edition = "2021"
license = "CC0-1.0"
description = "OS Error Codes."
repository = "https://github.com/xavetar/OSEXave"
include = ["*.rs", "src/", "LICENSE", "Cargo.toml"]
exclude = [".*", ".DS_Store", "debug/", "target/", "Cargo.lock", "**/*.rs.bk", "*.pdb", ".AppleDouble", ".LSOverride",
    "Icon", "._*", ".DocumentRevisions-V100", ".fseventsd", ".Spotlight-V100", ".TemporaryItems", ".Trashes",
    ".VolumeIcon.icns", ".com.apple.timemachine.donotpresent", ".AppleDB", ".AppleDesktop", "Network Trash Folder",
    "Temporary Items", ".apdisk", ".env", ".gitignore", ".git", ".idea", "/resources"]

[features]
default = []
